sonar review, replace deprecated new URL() usage